--- a/css/style.css
+++ b/css/style.css
@@ -297,3 +297,244 @@
         transform: translateX(0%);
     }
 }
+
+.main{
+    display: flex;
+    justify-content: space-between;
+    margin-top: 100px;
+} 
+
+.main .articles{
+    flex-basis: 70%;
+}
+
+.main .articles > h1{
+    width: 100%;
+    height: 70px;
+    display: block;
+    text-align: center;
+    margin-bottom: 45px;
+    line-height: 70px;
+    font-family: trebuchet;
+    font-size: 35px;
+    letter-spacing: 2px;
+    box-shadow: 1px 1px 0px #555,
+                2px 2px 0px #555,
+                3px 3px 0px #555,
+                4px 4px 0px #555;
+    background: url(img/pxgray.png);
+}
+
+.main .articles .article{
+    display: block;
+    font-family: sans-serif;
+    margin-top: 20px;
+    padding: 12px;
+    border: none;
+    border-radius: 2px;
+    border: 1px solid #ccc;
+    box-shadow: 0px 0px 1px #ccc;
+    background: white;
+    position: relative;
+}
+
+.main .articles .article .fecha{
+    display: block;
+    font-size: 12px;
+    color: white;
+    width: 200px;
+    padding: 10px;
+    position: absolute;
+    top: 0px;
+    right: 0px;
+    border-radius: 0px 0px 0px 5px;
+    background: rgb(57, 61, 63);
+}
+
+.main .articles .article h1{
+    font-size: 25px;
+    color: rgb(46, 91, 157);
+}
+
+.main .articles .article > p{
+    margin-top: 15px;
+}
+
+.main .articles .article p span{
+    color: rgb(46, 91, 157);
+}
+
+.main .lateral{
+    flex-basis: 20%;
+}
+
+.main .lateral .buscar h1{
+    width: 85%;
+    margin: 0px auto;
+    height: 35px;
+    display: block;
+    text-align: left;
+    line-height: 35px;
+    font-family: trebuchet;
+    font-size: 30px;
+    letter-spacing: 2px;
+    padding: 10px;
+    box-shadow: 1px 1px 0px #555,
+                2px 2px 0px #555,
+                3px 3px 0px #555,
+                4px 4px 0px #555;
+    background: url(img/pxgray.png);
+}
+
+.main .lateral .buscador{
+    display: block;
+    width: 85%;
+    height: 25px;
+    margin: 15px auto;
+    position: relative;
+    border: none;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+    box-shadow: 0px 0px 5px #ccc inset;
+    background: white;
+}
+
+.main .lateral .buscador input[type="text"]{
+    display: block;
+    float: left;
+    border: none;
+    width: 85%;
+    height: 100%;
+    padding: 5px;
+    box-sizing: border-box;
+    background: transparent;
+}
+
+.main .lateral .buscador input[type="text"]:focus{
+    border: none;
+    outline: none;
+}
+
+.main .lateral .buscador div{
+    display: block;
+    float: right;
+    width: 14%;
+    text-align: center;
+    line-height: 25px;
+    border-left: 1px solid #ccc;
+}
+
+.main .lateral .login h1{
+    width: 85%;
+    margin: 0px auto;
+    height: 35px;
+    display: block;
+    text-align: left;
+    line-height: 35px;
+    font-family: trebuchet;
+    font-size: 30px;
+    letter-spacing: 2px;
+    padding: 10px;
+    box-shadow: 1px 1px 0px #555,
+                2px 2px 0px #555,
+                3px 3px 0px #555,
+                4px 4px 0px #555;
+    background: url(img/pxgray.png);
+}
+
+.main .lateral .login .content{
+    display: block;
+    width: 80%;
+    padding: 10px;
+    margin: 15px auto;
+    border: none;
+    border-radius: 3px;
+    border: 1px solid #ccc;
+    box-shadow: 0px 0px 7px #ccc,
+                0px 3px 1px #ccc;
+    background: white;
+    position: relative;
+}
+
+.main .lateral .login .content form input[type="text"]{
+    display: block;
+    width: 100%;
+    height: 25px;
+    padding-left: 27px;
+    margin-top: 15px;
+    border: none;
+    border-radius: 3px;
+    border: 1px solid #ccc;
+    box-shadow: 0px 0px 3px #ccc inset,
+                -1px -2px 1px #ccc;
+    box-sizing: border-box;
+}
+
+.main .lateral .login .content form .userIcon{
+    position: absolute;
+    top: 27px;
+    left: 17px;
+}
+
+.main .lateral .login .content form .pasdIcon{
+    position: absolute;
+    top: 70px;
+    left: 20px;
+}
+
+.main .lateral .login .content form input[type="button"]{
+    width: 65px;
+    height: 35px;
+    display: block;
+    float: left;
+    color: white;
+    font-family: sans-serif;
+    font-size: 12px;
+    text-align: center;
+    line-height: 35px;
+    margin-top: 15px;
+    margin-left: 10px;
+    margin-bottom: 15px;
+    border: none;
+    border-radius: 2px;
+    border: 1px solid #555;
+    background: rgb(95, 189, 249);
+    transition: all 250ms linear;
+}
+
+.main .lateral .login .content form input[type="button"]:hover{
+    transform: scale(1.1);
+    color: rgb(95, 189, 249);
+    border: 1px solid rgb(95, 189, 249);
+    background: #444;
+}
+
+.main .lateral .login .content span{
+    display: block;
+    margin-bottom: 5px;
+    font-family: trebuchet;
+    font-size: 12px;
+    font-weight: bolder;
+}
+
+.main .lateral .login .content span a{
+    text-decoration: none;
+    color: black;
+}
+
+.main .lateral .login .content span a:hover{
+    text-decoration: underline;
+}
+
+.footer{
+    width: 100%;
+    height: 80px;
+    color: white;
+    font-family: bebasneue;
+    font-size: 25px;
+    letter-spacing: 2px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: black;
+}
